# DicomViewer

./: CMakeLists.txt  README.md
src/DicomViewerWindow/: DicomViewerWindow.cpp  DicomViewerWindow.h  DicomViewerWindow.ui
src/FileHandling/: FileHandling.h  GDCMFileHandling.cpp  GDCMFileHandling.h
src/Main/: main.cpp
src/Model/: DicomImage.h  MedicalImage.h
src/Resources/: DICOMDIR  cdinfo
src/Resources/DICOM/20230113/11190000/19070000/: 15116586  15116719
src/Resources/syngo_fV/: readme.rtf  readme.txt
src/VTKwidget/: VTKwidget.cpp  VTKwidget.h
